<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextHintTitle"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextHintDescription"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:inputType="number"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSaveText"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loadButton"/>


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

</androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>